FILE(GLOB_RECURSE QSS_FILES *.qss)
SET(PIXMAP_DIRS "BreezeStyleSheets/Breeze"
                "BreezeStyleSheets/BreezeDark")
IF(WIN32)

ELSE(WIN32)
SET(QSS_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/share/scantailor-universal/stylesheets")
SET(PIX_INSTALL_PATH ${PIXMAPS_DIR_ABS})
INSTALL(FILES ${QSS_FILES} DESTINATION ${QSS_INSTALL_PATH})
INSTALL(DIRECTORY ${PIXMAP_DIRS} DESTINATION ${PIX_INSTALL_PATH})
ENDIF(WIN32)
