FILE(GLOB_RECURSE QSS_FILES *.qss)
SET(STYLESHEET_PIXMAP_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/BreezeStyleSheets/Breeze"
                "${CMAKE_CURRENT_SOURCE_DIR}/BreezeStyleSheets/BreezeDark")
IF(WIN32 OR APPLE)
    # Let QSS_FILES and STYLESHEET_PIXMAP_DIRS be accessible in packaging/windows/
    SET (QSS_FILES ${QSS_FILES} PARENT_SCOPE)
    SET (STYLESHEET_PIXMAP_DIRS ${STYLESHEET_PIXMAP_DIRS} PARENT_SCOPE)
ELSE(WIN32 OR APPLE)
    SET(QSS_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/share/scantailor-universal/stylesheets")
    SET(PIX_INSTALL_PATH ${PIXMAPS_DIR_ABS})
    INSTALL(FILES ${QSS_FILES} DESTINATION ${QSS_INSTALL_PATH})
    INSTALL(DIRECTORY ${STYLESHEET_PIXMAP_DIRS} DESTINATION ${PIX_INSTALL_PATH})
ENDIF(WIN32 OR APPLE)
